[package]
name = "wasm-engine"
version = "0.0.1"
edition = "2021"
description = ""
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "^1"
thiserror = { workspace = true }
cid = { workspace = true }
wasmtime = { version = "^10.0.1", optional = true }
wasm3 = { version = "^0.3.1", optional = true }

[features]
default = []
wasmtime = ["wasmtime"]
wasm3 = ["wasm3"]

