[package]
name = "wasm-engine"
version = "0.0.1"
edition = "2021"
description = ""
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "^1"
cid = { workspace = true }
thiserror = { workspace = true }
wasmtime = { version = "^10.0.1", optional = true }
wasm3 = { version = "^0.3.1", optional = true, features = ["build-bindgen"] }

[dev-dependencies]
wat = { version = "^1.0.67" }

[features]
default = []
wasmtime = ["dep:wasmtime"]
wasm3 = ["dep:wasm3"]

