[package]
name = "storage-bench"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
noosphere-storage = { path = "../../noosphere-storage", features = ["performance"] }
noosphere-core = { path = "../../noosphere-core", features = ["helpers"] }
noosphere-common = { path = "../../noosphere-common", features = ["helpers"] }
rand = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
witty-phrase-generator = "~0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync", "macros"] }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }

[features]
default = []
rocksdb = ["noosphere-storage/rocksdb"]
rocksdb-multi-thread = ["noosphere-storage/rocksdb-multi-thread"]
