[package]
name = "noosphere-storage-benchmarks"
version = "1.0.0"
edition = "2021"
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/noosphere-storage"
repository = "https://github.com/subconsciousnetwork/noosphere"
homepage = "https://github.com/subconsciousnetwork/noosphere"

[dependencies]
noosphere-storage = { path = "../../", features = ["performance"] }
noosphere-core = { path = "../../../noosphere-core", features = ["helpers"] }
noosphere-common = { path = "../../../noosphere-common", features = ["helpers"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[features]
default = []
rocksdb = ["noosphere-storage/rocksdb"]
rocksdb-mt = ["noosphere-storage/rocksdb-mt"]
sqlite = ["noosphere-storage/sqlite"]
